docs: 新增2篇 + 深度优化4篇 (3256行新增)
新增文章:
- exception.md (766行): 异常体系、Checked vs Unchecked、try-with-resources原理、自定义异常体系
- reflection.md (791行): 反射API全景、动态代理(JDK vs CGLIB)、性能对比、Spring/Jackson应用

深度优化:
- io.md (384→925行): NIO三大核心、Buffer状态图、零拷贝、Selector/epoll、NIO.2
- oop.md (573→1305行): 接口演进、枚举深入、record类、sealed class、对象内存布局
- concurrency.md (490→687行): synchronized锁升级、AQS原理、volatile深入、ThreadLocal

其他:
- navbar.ts 新增面试题库导航入口